지도 주소로 검색하는 기능추가
지도 검색 기능 추가

--- a/MyTeamProject1/app/src/main/res/layout/activity_home.xml
+++ b/MyTeamProject1/app/src/main/res/layout/activity_home.xml
@@ -34,4 +34,10 @@
         android:layout_width="match_parent"
         android:layout_height="74dp"
         android:text="신고하기" />
+
+    <Button
+        android:id="@+id/mapsearchbtn"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:text="맵 검색" />
 </LinearLayout>
