--- a/MyTeamProject1/app/src/main/res/layout/activity_home.xml
+++ b/MyTeamProject1/app/src/main/res/layout/activity_home.xml
@@ -40,4 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="74dp"
         android:text="맵 검색" />
+
+    <Button
+        android:id="@+id/writethreadbtn"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:text="스레드 쓰기" />
 </LinearLayout>
