디자인바꿔놓은거

--- a/MyTeamProject1/app/src/main/res/layout/activity_find.xml
+++ b/MyTeamProject1/app/src/main/res/layout/activity_find.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#49c5cb">
+    android:background="#ffbebe">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="800dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,17 +19,19 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/findid"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/inputtel1"
-                android:layout_width="228dp"
-                android:layout_height="47dp"
+                android:layout_width="220dp"
+                android:layout_height="37dp"
                 android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
                 android:background="#FCF9F9"
                 android:backgroundTint="#FCF9F9"
                 android:ems="10"
@@ -38,10 +40,10 @@
 
             <EditText
                 android:id="@+id/inputbirth1"
-                android:layout_width="228dp"
-                android:layout_height="47dp"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-
+                android:layout_marginBottom="10dp"
                 android:background="#FCF9F9"
                 android:backgroundTint="#FFFFFF"
                 android:ems="10"
@@ -53,37 +55,42 @@
                 android:layout_width="235dp"
                 android:layout_height="59dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                android:background="#ff9999"
                 android:onClick="clickFindID"
-                android:text="@string/findid" />
+                android:text="확인"
+                android:textSize="18pt" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="40dp"
                 android:text="@string/findpwd"
-                android:textSize="40sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/inputid1"
-                android:layout_width="228dp"
-                android:layout_height="47dp"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="32dp"
                 android:background="#FCF9F9"
                 android:backgroundTint="#FFFFFF"
+                android:layout_marginBottom="10dp"
                 android:ems="10"
                 android:hint="@string/hint1"
                 android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/inputtel2"
-                android:layout_width="228dp"
-                android:layout_height="47dp"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:background="#FCF9F9"
+                android:layout_marginBottom="10dp"
                 android:backgroundTint="#FFFFFF"
                 android:ems="10"
                 android:hint="@string/hint4"
@@ -91,13 +98,14 @@
 
             <EditText
                 android:id="@+id/inputbirth2"
-                android:layout_width="228dp"
-                android:layout_height="47dp"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:background="#FCF9F9"
                 android:backgroundTint="#FFFFFF"
                 android:ems="10"
                 android:hint="@string/hint3"
+                android:layout_marginBottom="10dp"
                 android:inputType="textPersonName" />
 
             <Button
@@ -105,17 +113,23 @@
                 android:layout_width="235dp"
                 android:layout_height="59dp"
                 android:layout_gravity="center"
+                android:background="#ff9999"
+                android:layout_marginBottom="5dp"
                 android:onClick="clickFindPWD"
-                android:text="@string/findpwd" />
+                android:layout_marginTop="12dp"
+                android:textSize="18pt"
+                android:text="확인" />
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="259dp"
+                android:layout_width="100dp"
                 android:layout_height="57dp"
-                android:layout_marginTop="12dp"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:textSize="16pt"
+                android:background="#f07878"
                 android:onClick="clickBack"
-                android:text="@string/back" />
+                android:text="이전" />
 
         </LinearLayout>
     </ScrollView>
